# ply

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: cpp_core_find_package.cmake  cxx_plyConfig.cmake.in  install_config.cmake  plyConfig.cmake.in
config/: config.h.in
include/ply/: anchor.h  autorange.h  axis.h  axis_type.h  base.h  color.h  config.h.in  contour.h  dash.h  enum.h  font.h  generate.h  group_norm.h  heatmap.h  layout.h  line.h  margin.h  marker.h  members.h  name.h  ohlc.h  orientation.h  pad.h  ply.h  range.h  range_slider.h  rangemode.h  ref.h  scatter.h  scatter3d.h  scene.h  shape.h  text.h  tickmode.h  title.h  xaxis.h  yaxis.h  zaxis.h
src/: generate.cpp  placeholder.cpp
src/ply/: generate.cpp
src/tools/: ply_t0.cpp  ply_t1.cpp  t0.cpp
test/: CMakeLists.txt
test/src/: test_anchor.cpp  test_autorange.cpp  test_axis_type.cpp  test_color.cpp  test_contour.cpp  test_dash.cpp  test_enum.cpp  test_generate.cpp  test_group_norm.cpp  test_heatmap.cpp  test_layout.cpp  test_line.cpp  test_margin.cpp  test_marker.cpp  test_ohlc.cpp  test_orientation.cpp  test_pad.cpp  test_placeholder.cpp  test_range_slider.cpp  test_rangemode.cpp  test_ref.cpp  test_scatter.cpp  test_scatter3d.cpp  test_scene.cpp  test_shape.cpp  test_title.cpp  test_xaxis.cpp  test_yaxis.cpp  test_zaxis.cpp
